[NODE_TESTS 2/20] Add in module.exports to icu.en.js to make testing easier.
Summary: This has no impact in most cases but when loading this file in Node.js (such as in the new Node.js test runner) it will properly export the icu object and become usable.

Test Plan: Hard to test without the Node.js test runner! Should be a safe change, though.

Reviewers: kevinb, jeff

Reviewed By: kevinb, jeff

Differential Revision: https://phabricator.khanacademy.org/D42690

--- a/README
+++ b/README
@@ -13,3 +13,17 @@ they're separated out per-language, just like we like.
 The short download.sh script downloads the latest data from
 localeplanet, making sure to get all the languages that babel
 supports.
+
+After downloading icu.en.js is modified in the following way:
+
+-       window.icu = window.icu || new Object();
+-       var icu = window.icu;
++    var icu;
++
++    if (typeof window !== "undefined") {
++        icu = window.icu = window.icu || {};
++    } else if (typeof module !== "undefined") {
++        icu = module.exports = {};
++    }
+
+This makes it so that icu becomes available when running our JS inside Node.
